Use circle buffer to get previous rotations
Should help with performance.